added further content to index.html and style.css

--- a/style.css
+++ b/style.css
@@ -1,16 +1,31 @@
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+
+
+Header {}
+
+body {
+    margin: 0;
+    margin-top: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+footer {
+    margin-top: 100px;
+    line-height: 1px;
+    text-align: center;
 }
 
 h1 {
     text-align: center;
 }
 
-body {
-    margin: 0;
-    margin-top: 50px;
-    font-family: sans-serif;
+ul {
+    text-align: center;
+
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
